Wrap facet-item in <a> to fix keyboard navigation

--- a/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_facets.scss
+++ b/src/adhocracy_frontend/adhocracy_frontend/static/stylesheets/scss/components/_facets.scss
@@ -18,9 +18,10 @@
     }
 
     .facet-item {
-        cursor: pointer;
         line-height: 1;
         margin-bottom: 1em;
+        color: inherit;
+        text-decoration: inherit;
 
         &:hover, &:focus {
             color: $color-text-highlight-normal;
